@@ -6,6 +6,7 @@ from django.db.models import Model
 from django.utils.safestring import mark_safe
 
 from wagtail.admin.checks import check_panels_in_model
+from wagtail.admin.edit_handlers import ObjectList, extract_panel_definitions_from_model_class
 from wagtail.core import hooks
 from wagtail.core.models import Page
 
@@ -371,6 +372,29 @@ class ModelAdmin(WagtailRegisterable):
         kwargs = {'model_admin': self, 'instance_pk': instance_pk}
         view_class = self.delete_view_class
         return view_class.as_view(**kwargs)(request)
+
+    def get_edit_handler(self, instance, request):
+        """
+        Returns the appropriate edit_handler for this modeladmin class.
+        edit_handlers can be defined either on the model itself or on the
+        modeladmin (as property edit_handler or panels). Falls back to
+        extracting panel / edit handler definitions from the model class.
+        """
+        if hasattr(self, 'edit_handler'):
+            edit_handler = self.edit_handler
+        elif hasattr(self, 'panels'):
+            panels = self.panels
+            edit_handler = ObjectList(panels)
+        elif hasattr(self.model, 'edit_handler'):
+            edit_handler = self.model.edit_handler
+        elif hasattr(self.model, 'panels'):
+            panels = self.model.panels
+            edit_handler = ObjectList(panels)
+        else:
+            fields_to_exclude = self.get_form_fields_exclude(request=request)
+            panels = extract_panel_definitions_from_model_class(self.model, exclude=fields_to_exclude)
+            edit_handler = ObjectList(panels)
+        return edit_handler
 
     def get_templates(self, action='index'):
         """
